--- a/.github/workflows/integration_testing_dev.yml
+++ b/.github/workflows/integration_testing_dev.yml
@@ -1,20 +1,8 @@
 name: Portal Integration Testing - DEV
 on:
-  # pull_request:
-  #   paths:
-  #     - 'test/cypress-ui-test-automation/**'
-  #     - 'test/api-jest-supertest/**'
-  workflow_call:
-    inputs:
-      base_url:
-        description: 'Base url of the Assessment Management application.'
-        required: true
-        type: string
-        
-env:
-    AWS_REGION : ${{ vars.AWS_REGION }}
-    NODE_VERSION: "20.10.0"
-    BUILD_DIR : ./test
+  push:
+    branches:
+      - main        
     
 permissions:
     id-token: write
