--- a/.github/workflows/integration_testing_dev.yml
+++ b/.github/workflows/integration_testing_dev.yml
@@ -12,7 +12,9 @@ jobs:
   integration-tests:
     name: Run Integration Tests
     runs-on: ubuntu-latest
-    environment: ${{ vars.ENV }}
+    environment: stage
+    env:
+      ENV: ${{ vars.ENV }}
 
     steps:
     - name: Print environment variables
