--- a/.github/workflows/integration_testing_dev.yml
+++ b/.github/workflows/integration_testing_dev.yml
@@ -12,7 +12,7 @@ jobs:
   integration-tests:
     name: Run Integration Tests
     runs-on: ubuntu-latest
-    environment: stage
+    environment: production
     env:
       ENV: ${{ vars.ENV }}
 
