--- a/.github/workflows/integration_testing_dev.yml
+++ b/.github/workflows/integration_testing_dev.yml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   integration-tests-dev:
-    if: github.ref == 'refs/heads/develop'
+    if: github.ref != 'refs/heads/main'
     name: Run Integration Tests dev
     runs-on: ubuntu-latest
     environment: dev
