--- a/.github/workflows/PortalIntegrationTesting.yml
+++ b/.github/workflows/PortalIntegrationTesting.yml
@@ -11,13 +11,15 @@ permissions:
 
 jobs:
   integration-tests-dev:
+    name: Run Integration Tests DEV
     if: github.ref != 'refs/heads/main'
     uses: alcantar28/GHAReusableWorkflows/.github/workflows/integration_testing_generic.yml@AM-1
     with:
-      environment: dev
+      gh_environment: dev
 
   integration-tests-prod:
+    name: Run Integration Tests PROD
     if: github.ref == 'refs/heads/main'
     uses: alcantar28/GHAReusableWorkflows/.github/workflows/integration_testing_generic.yml@main
     with:
-      environment: prod
+      gh_environment: prod
