--- a/.github/workflows/PortalIntegrationTesting.yml
+++ b/.github/workflows/PortalIntegrationTesting.yml
@@ -13,7 +13,7 @@ jobs:
   integration-tests-dev:
     name: Run Integration Tests DEV
     if: github.ref != 'refs/heads/main'
-    uses: alcantar28/GHAReusableWorkflows/.github/workflows/integration_testing_generic.yml@AM-1
+    uses: alcantar28/GHAReusableWorkflows/.github/workflows/integration_testing_generic.yml@${{ github.ref }}
     with:
       environment: dev
 
