--- a/.github/workflows/integration_testing_generic.yml
+++ b/.github/workflows/integration_testing_generic.yml
@@ -23,4 +23,4 @@ jobs:
       run: |
         echo "vars Environment: ${{ vars.ENV }}"
         echo "GH Environment: ${{ inputs.environment }}"
-        echo "github.ref: ${{ github.ref }}"
+        echo "github.ref: ${{ github.ref_name }}"
